fiexed: single task refactroing

--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -166,7 +166,7 @@
       </p>
     </div>
 
-    <div class="task-card_team">
+    <div class="task-card-team">
       <div class="team-left">
         <!-- Zeigt maximal 4 Teilnehmer mit ihren Initialen -->
         @for (id of getVisibleContacts(task); track $index) { @for (contact of
