--- a/src/app/main/content/contacts/contacts.component.scss
+++ b/src/app/main/content/contacts/contacts.component.scss
@@ -28,7 +28,7 @@ section {
       @include dFlex($g: 20px);
       width: 352px;
       height: 56px;
-      background-color: $dark-blue;
+      background-color: $dark_blue;
       color: $white;
       border-radius: 10px;
       cursor: pointer;
@@ -101,13 +101,13 @@ section {
         }
 
         &:hover {
-          background-color: $cream-white;
+          background-color: $cream_white;
           box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
           border-radius: 10px;
         }
 
         &.active {
-          background-color: $dark-blue;
+          background-color: $dark_blue;
           border-radius: 10px;
           color: $white;
         }
@@ -149,7 +149,7 @@ section {
 
     > p {
       @include font($fs: 27px, $fw: 400);
-      color: $dark-blue;
+      color: $dark_blue;
     }
   }
 
@@ -203,7 +203,7 @@ section {
             }
 
             &:hover {
-              color: $light-blue;
+              color: $light_blue;
               @include font($fs: 16px, $fw: 700);
 
               .pencil-icon,
@@ -380,7 +380,7 @@ section {
     width: 100%;
     @include dFlex($jc: flex-start, $g: 50px);
     position: absolute;
-    background-color: $cream-white;
+    background-color: $cream_white;
 
     .headline {
       @include dFlex($jc: flex-start, $ai: flex-start, $g: 10px);
@@ -399,7 +399,7 @@ section {
       .border-blue {
         width: 90px;
         border: 3px solid;
-        border-color: $light-blue;
+        border-color: $light_blue;
       }
 
       > img {
@@ -414,9 +414,9 @@ section {
     cursor: pointer;
     @include dFlex();
     border: 1px solid;
-    border-color: $dark-blue;
+    border-color: $dark_blue;
     border-radius: 50%;
-    background-color: $dark-blue;
+    background-color: $dark_blue;
     height: 56px;
     width: 56px;
     position: absolute;
@@ -425,8 +425,8 @@ section {
     z-index: 3;
 
     &:hover {
-      background-color: $light-blue;
-      border-color: $light-blue;
+      background-color: $light_blue;
+      border-color: $light_blue;
     }
   }
 
@@ -526,7 +526,7 @@ section {
       .border-blue {
         width: 90px;
         border: 3px solid;
-        border-color: $light-blue;
+        border-color: $light_blue;
       }
 
       > img {
@@ -575,7 +575,7 @@ section {
   position: fixed;
   bottom: 250px;
   right: 40%;
-  background-color: $dark-blue;
+  background-color: $dark_blue;
   color: $white;
   padding: 24px 24px;
   border-radius: 24px;
