fixed: search btn hover color

--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -79,7 +79,7 @@ input::placeholder {
 
   &:hover {
     cursor: pointer;
-    background-color: $light_gray;
+    background-color: $hover_gray;
   }
 }
 
