login.component created

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,2 +1,45 @@
-<!-- <h3>login-Section</h3>
-<p>In dieser Sectionen kann man sich einloggen (kommt später).</p> -->
+<section>
+  <div class="header-section">
+    <img class="logo" src="assets/img/join_logo.svg" alt="Logo" />
+    <!-- <div class="sign-in">
+      <p>Not a Join user?</p>
+      <button>Sign up</button>
+    </div> -->
+  </div>
+
+  <div class="logIn-section">
+    <h1>Log in</h1>
+
+    <form>
+      <div class="input-email">
+        <input
+          type="text"
+          name="email"
+          placeholder="Email"
+          pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+        />
+        <img src="assets/img/icons/mail.svg" />
+      </div>
+      <div class="input-password">
+        <input
+          type="text"
+          name="password"
+          placeholder="password"
+          pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
+        />
+        <img src="assets/img/icons/mail.svg" />
+      </div>
+    </form>
+  </div>
+
+  <div class="sign-in">
+    <p>Not a Join user?</p>
+    <button>Sign up</button>
+  </div>
+
+  <div class="footer-section">
+    <p>Privacy Policy</p>
+    <p>Legal Notice</p>
+
+  </div>
+</section>
