--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -13,7 +13,7 @@
       <div class="input-field">
         <input
           type="text"
-          id="subtasks"
+          id="searchText"
           name="searchText"
           [(ngModel)]="searchText"
           placeholder="Find task"
