--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,10 +1,6 @@
 <section>
   <div class="header-section">
     <img class="logo" src="assets/img/join_logo.svg" alt="Logo" />
-    <!-- <div class="sign-in">
-      <p>Not a Join user?</p>
-      <button>Sign up</button>
-    </div> -->
   </div>
 
   <div class="logIn-section">
@@ -14,6 +10,7 @@
       <div class="input-email">
         <input
           type="text"
+          id="email"
           name="email"
           placeholder="Email"
           pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
@@ -23,6 +20,7 @@
       <div class="input-password">
         <input
           type="text"
+          id="password"
           name="password"
           placeholder="password"
           pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
