lock icon added

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -25,7 +25,7 @@
           placeholder="password"
           pattern="^(?=.*[A-Z])(?=.*\d)(?=.*[^\w]).{8,20}$"
         />
-        <img src="assets/img/icons/mail.svg" />
+        <img src="assets/img/icons/lock_icon.svg" />
       </div>
     </form>
   </div>
