log in styles added

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -3,9 +3,8 @@
     <img class="logo" src="assets/img/join_logo.svg" alt="Logo" />
   </div>
 
-  <div class="logIn-section">
+  <div class="login-section">
     <h1>Log in</h1>
-
     <form>
       <div class="input-email">
         <input
@@ -27,10 +26,14 @@
         />
         <img src="assets/img/icons/lock_icon.svg" />
       </div>
+      <div class="btn-section">
+        <button class="btn-login">Log in</button>
+        <button class="btn-guest-login">Guest Log in</button>
+      </div>
     </form>
   </div>
 
-  <div class="sign-in">
+  <div class="sign-up">
     <p>Not a Join user?</p>
     <button>Sign up</button>
   </div>
@@ -38,6 +41,5 @@
   <div class="footer-section">
     <p>Privacy Policy</p>
     <p>Legal Notice</p>
-
   </div>
 </section>
