first try to insert the Auth Service

--- a/src/app/main/content/summary/summary.component.scss
+++ b/src/app/main/content/summary/summary.component.scss
@@ -23,9 +23,9 @@ section {
   }
 }
 
-.border-blue {
-  border: 3px solid;
-  border-color: $light_blue;
+.border-blue {  
+  background-color: $light_blue;
+  width: 3px;  
 }
 
 .vertical {
