--- a/src/app/main/login/login.component.scss
+++ b/src/app/main/login/login.component.scss
@@ -1,178 +1,195 @@
 @import "./../../../styles.scss";
 
 section {
-    @include dFlex($jc: space-between, $g: 50px);
-    flex-direction: column;
-    height: 100vh;
-    position: relative;
+  @include dFlex($jc: space-between, $g: 50px);
+  flex-direction: column;
+  height: 100vh;
+  position: relative;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 
+  &.page-loaded {
+    opacity: 1;
+  }
+
+  .animated-logo {
+    position: absolute;
+    width: 10vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(3);
+    transition: all 1s ease-in-out;
+    z-index: 100;
+
+    &.logo-final-position {
+      top: 4rem;
+      left: 4rem;
+      transform: translate(0%, 0%) scale(1);
+    }
+  }
 }
 
 .header-section {
-    @include dFlex($jc: space-between, $ai: flex-start);
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
-    width: 100%;
+  @include dFlex($jc: space-between, $ai: flex-start);
+  padding-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  width: 100%;
 
-    .logo {
-        width: 100.03px;
-        height: 121.97px;
-    }
+  .logo {
+    width: 100px;
+    height: 122px;
+  }
 }
 
 .sign-up {
-    @include dFlex($jc: space-between, $g: 20px);
+  @include dFlex($jc: space-between, $g: 20px);
 
-    >p {
-        @include font($fs: 20px, $fw: 400);
-    }
+  > p {
+    @include font($fs: 20px, $fw: 400);
+  }
 
-    >button {
-        padding: 15px 16px;
-        border: unset;
-        border-radius: 8px;
-        background-color: $dark_blue;
-        @include font($fs: 16px, $fw: 700);
-        color: $white;
-        cursor: pointer;
-    }
+  > button {
+    padding: 15px 16px;
+    border: unset;
+    border-radius: 8px;
+    background-color: $dark_blue;
+    @include font($fs: 16px, $fw: 700);
+    color: $white;
+    cursor: pointer;
+  }
 }
 
 .login-section {
+  @include dFlex($g: 30px);
+  flex-direction: column;
+  width: 93%;
+  height: 449px;
+  background-color: $white;
+  border: unset;
+  border-radius: 30px;
+  padding: 48px 115px;
+
+  > h1 {
+    @include font($fs: 47px, $fw: 700);
+  }
+
+  .border-blue {
+    width: 150px;
+    border-bottom: 3px solid $aqua;
+    border-radius: 3px;
+  }
+
+  form {
     @include dFlex($g: 30px);
     flex-direction: column;
-    width: 93%;
-    height: 449px;
-    background-color: $white;
-    border: unset;
-    border-radius: 30px;
-    padding: 48px 115px;
+  }
 
-    >h1 {
-        @include font($fs: 47px, $fw: 700);
+  .input-email,
+  .input-password {
+    @include dFlex($jc: space-between, $g: 10px);
+    width: 64.72vw;
+    max-width: 422px;
+    height: 48px;
+    border: 1px solid $light_gray;
+    border-radius: 10px;
+    padding: 12px 21px;
+    cursor: text;
+
+    > img {
+      width: 24px;
+      height: 24px;
     }
 
-    .border-blue {
-        width: 150px;
-        border-bottom: 3px solid $aqua;
-        border-radius: 3px;
+    > input {
+      // flex: 1;
+      width: 80%;
+      border: unset;
+      height: 24px;
+      @include font($fs: 20px, $fw: 400);
+
+      &:focus {
+        border: unset;
+        outline: none;
+      }
+
+      &::placeholder {
+        @include font($fs: 20px, $fw: 400);
+        color: $light_gray;
+      }
+    }
+  }
+
+  .btn-section {
+    @include dFlex($g: 30px);
+    margin-top: 50px;
+
+    .btn-login,
+    .btn-guest-login {
+      @include dFlex();
+      @include font($fs: 21px, $fw: 700);
+      height: 48px;
+      color: $white;
+      padding: 15px 24px;
+      border: unset;
+      border-radius: 8px;
+      background-color: $dark_blue;
+      cursor: pointer;
     }
 
-    form {
-        @include dFlex($g: 30px);
-        flex-direction: column;
+    .btn-login {
+      &:hover {
+        background-color: $light_blue;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border: unset;
+      }
     }
 
-    .input-email,
-    .input-password {
-        @include dFlex($jc: space-between, $g: 10px);
-        width: 64.72vw;
-        max-width: 422px;
-        height: 48px;
-        border: 1px solid $light_gray;
-        border-radius: 10px;
-        padding: 12px 21px;
-        cursor: text;
+    .btn-guest-login {
+      color: $dark_blue;
+      background-color: $white;
+      border: 1px solid $dark_blue;
 
-        >img {
-            width: 24px;
-            height: 24px;
-        }
-
-        >input {
-            // flex: 1;
-            width: 80%;
-            border: unset;
-            height: 24px;
-            @include font($fs: 20px, $fw: 400);
-
-            &:focus {
-                border: unset;
-                outline: none;
-            }
-
-            &::placeholder {
-                @include font($fs: 20px, $fw: 400);
-                color: $light_gray;
-            }
-        }
+      &:hover {
+        border-color: $light_blue;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        color: $light_blue;
+      }
     }
-
-    .btn-section {
-        @include dFlex($g: 30px);
-        margin-top: 50px;
-
-        .btn-login,
-        .btn-guest-login {
-            @include dFlex();
-            @include font($fs: 21px, $fw: 700);
-            height: 48px;
-            color: $white;
-            padding: 15px 24px;
-            border: unset;
-            border-radius: 8px;
-            background-color: $dark_blue;
-            cursor: pointer;
-        }
-
-        .btn-login {
-
-            &:hover {
-                background-color: $light_blue;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                border: unset;
-            }
-        }
-
-        .btn-guest-login {
-            color: $dark_blue;
-            background-color: $white;
-            border: 1px solid $dark_blue;
-
-            &:hover {
-                border-color: $light_blue;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                color: $light_blue;
-            }
-        }
-    }
+  }
 }
 
-
-
 .footer-section {
-    @include dFlex($g: 40px);
-    padding-bottom: 30px;
+  @include dFlex($g: 40px);
+  padding-bottom: 30px;
 
-    >a {
-        @include font($fs: 16px, $fw: 400);
-        color: $gray;
-        cursor: pointer;
-    }
+  > a {
+    @include font($fs: 16px, $fw: 400);
+    color: $gray;
+    cursor: pointer;
+  }
 }
 
 /*--------------------------------------------------   Desktop   --------------------------------------------------*/
 @media (min-width: 1024px) {
+  .login-section {
+    width: 45.28vw;
 
-    .login-section {
-        width: 45.28vw;
-
-        >h1 {
-            @include font($fs: 61px, $fw: 700);
-        }
+    > h1 {
+      @include font($fs: 61px, $fw: 700);
     }
+  }
 
-    .sign-up {
-        position: absolute;
-        top: 50px;
-        right: 50px;
+  .sign-up {
+    position: absolute;
+    top: 50px;
+    right: 50px;
 
-        >button {
-            &:hover {
-                background-color: $light_blue;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            }
-        }
+    > button {
+      &:hover {
+        background-color: $light_blue;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      }
     }
+  }
 }
