--- a/src/app/main/login/login.component.scss
+++ b/src/app/main/login/login.component.scss
@@ -1,7 +1,7 @@
 @import "./../../../styles.scss";
 
 section {
-    @include dFlex($jc: space-between, $g: 50px);
+    @include dFlex($jc: space-between, $g: 32px);
     flex-direction: column;
     height: 100vh;
     position: relative;
@@ -35,21 +35,11 @@ section {
     padding-left: 20px;
     padding-right: 20px;
     width: 100%;
-    @include dFlex($jc: space-between, $ai: flex-start);
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
-    width: 100%;
 
-    .logo {
-        width: 64px;
-        height: 78.03px;
-    }
-
-    .logo {
-        width: 100px;
-        height: 122px;
-    }
+    // .logo {
+    //     width: 64px;
+    //     height: 78.03px;
+    // }
 }
 
 .sign-up {
@@ -74,18 +64,21 @@ section {
     @include dFlex($g: 30px);
     flex-direction: column;
     width: 93%;
-    height: 449px;
+    max-width: 652px;
     background-color: $white;
+    box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
     border: unset;
     border-radius: 30px;
-    padding: 48px 115px;
+    padding: 32px 32px;
 
     >h1 {
         @include font($fs: 47px, $fw: 700);
+        width: 139px;
+        height: 59px;
     }
 
     .border-blue {
-        width: 150px;
+        width: 88px;
         border-bottom: 3px solid $aqua;
         border-radius: 3px;
     }
@@ -105,56 +98,21 @@ section {
         border-radius: 10px;
         padding: 12px 21px;
 
-        .input-email,
-        .input-password {
-            @include dFlex($jc: space-between, $g: 10px);
-            width: 64.72vw;
-            max-width: 422px;
-            height: 48px;
-            border: 1px solid $light_gray;
-            border-radius: 10px;
-            padding: 12px 21px;
-            cursor: text;
+        >img {
+            width: 24px;
+            height: 24px;
+        }
 
-            >img {
-                width: 24px;
-                height: 24px;
-            }
+        >input {
+            // flex: 1;
+            width: 80%;
+            border: unset;
+            height: 24px;
+            @include font($fs: 20px, $fw: 400);
 
-            >input {
-                // flex: 1;
-                width: 80%;
+            &:focus {
                 border: unset;
-                height: 24px;
-                @include font($fs: 20px, $fw: 400);
-                cursor: text;
-
-                >input {
-                    // flex: 1;
-                    width: 80%;
-                    border: unset;
-                    height: 24px;
-                    @include font($fs: 20px, $fw: 400);
-
-                    &:focus {
-                        border: unset;
-                        outline: none;
-                    }
-
-                    &::placeholder {
-                        @include font($fs: 20px, $fw: 400);
-                        color: $light_gray;
-                    }
-                }
-
-                .visibility_off {
-                    cursor: pointer;
-                }
-
-                >img {
-                    width: 24px;
-                    height: 24px;
-                }
+                outline: none;
             }
 
             &::placeholder {
@@ -162,6 +120,16 @@ section {
                 color: $light_gray;
             }
         }
+
+        .visibility_off {
+            cursor: pointer;
+        }
+
+        >img {
+            width: 24px;
+            height: 24px;
+        }
+
     }
 
     .btn-section {
@@ -169,64 +137,45 @@ section {
         flex-direction: column;
         margin-top: 20px;
 
-        .btn-section {
-            @include dFlex($g: 30px);
-            margin-top: 50px;
+        .btn-login,
+        .btn-guest-login {
+            @include dFlex();
+            @include font($fs: 21px, $fw: 700);
+            width: 180px;
+            height: 48px;
+            color: $white;
+            padding: 15px 24px;
+            border: unset;
+            border-radius: 8px;
+            background-color: $dark_blue;
+            cursor: pointer;
+        }
 
-            .btn-login,
-            .btn-guest-login {
-                @include dFlex();
-                @include font($fs: 21px, $fw: 700);
-                width: 180px;
-                height: 48px;
-                color: $white;
-                padding: 15px 24px;
+        .btn-login {
+            &:hover {
+                background-color: $light_blue;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                 border: unset;
-                border-radius: 8px;
-                background-color: $dark_blue;
-                cursor: pointer;
-            }
-
-            .btn-login,
-            .btn-guest-login {
-                @include dFlex();
-                @include font($fs: 21px, $fw: 700);
-                height: 48px;
-                color: $white;
-                padding: 15px 24px;
-                border: unset;
-                border-radius: 8px;
-                background-color: $dark_blue;
-                cursor: pointer;
-            }
-
-            .btn-login {
-                &:hover {
-                    background-color: $light_blue;
-                    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                    border: unset;
-                }
-            }
-
-            .btn-guest-login {
-                color: $dark_blue;
-                background-color: $white;
-                border: 1px solid $dark_blue;
-
-                &:hover {
-                    border-color: $light_blue;
-                    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-                    color: $light_blue;
-                }
             }
         }
+
+        .btn-guest-login {
+            color: $dark_blue;
+            background-color: $white;
+            border: 1px solid $dark_blue;
+
+            &:hover {
+                border-color: $light_blue;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                color: $light_blue;
+            }
+        }
+
     }
 
     .footer-section {
         @include dFlex($g: 40px);
         padding-bottom: 50px;
-        @include dFlex($g: 40px);
-        padding-bottom: 30px;
 
         >a {
             @include font($fs: 16px, $fw: 400);
@@ -238,22 +187,18 @@ section {
                 color: $light_blue;
             }
         }
-
-        >a {
-            @include font($fs: 16px, $fw: 400);
-            color: $gray;
-            cursor: pointer;
-        }
     }
 
     /*--------------------------------------------------   Desktop   --------------------------------------------------*/
     @media (min-width: 1024px) {
-        .login-section {
-            width: 45.28vw;
+        .header-section {
+            @include dFlex($g: 50px);
 
-            >h1 {
-                @include font($fs: 61px, $fw: 700);
-            }
+            // .logo {
+            //     width: 100.03px;
+            //     height: 121.97px;
+            //     padding: 48px 115px;
+            // }
         }
 
         .sign-up {
@@ -265,6 +210,34 @@ section {
                 &:hover {
                     background-color: $light_blue;
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                }
+            }
+        }
+
+        .login-section {
+            // width: 45.28vw;
+            width: 652px;
+            height: 449px;
+
+            >h1 {
+                @include dFlex();
+                @include font($fs: 61px, $fw: 700);
+                width: 100%;
+                height: 59px;
+            }
+
+            .border-blue {
+                width: 150px;
+            }
+
+            .btn-section {
+                @include dFlex($g: 30px);
+                flex-direction: row;
+                margin-top: 50px;
+
+                .btn-login,
+                .btn-guest-login {
+                    width: auto;
                 }
             }
         }
